add the fivico to the public indexhtml

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link id="favicon" rel="shortcut icon" href="/logoicoblack.png" type="image/png" />
+
 
     <!-- Font Awesome -->
     <link
